add dependencies to travis tests

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -10,6 +10,9 @@ dependencies:
   - pytest-cov
   - codecov
 
+    # Dependencies
+  - numpy
+  - psutil
     # Pip-only installs
   #- pip:
   #  - codecov
